fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ p {
 }
 
 .project-desciption {
-  padding: 120px 60px;
+  padding: 20px 60px;
 }
 
 img {
